--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Home</title>
+  <title>Index</title>
 
   <!-- Font Icon -->
   <link href="assets/css/plugin/font-awesome.min.css" rel="stylesheet" type="text/css">
